# OrderFlow-Trading

./: .claude-protection  .eslintrc  .eslintrc.backtesting.js  .gitattributes  .gitignore  .prettierignore  AGENTS.md  ANALYSIS_SCRIPTS_STATUS.md  ANALYSIS_TOOLS_VALIDATION.md  ANOMALY_LIST_IMPROVEMENTS.md  BACKTESTING_FRAMEWORK.md  CLAUDE.md  CLAUDE_old.md  COLUMN_RESIZE_DEMO.md  DETECTOR_AUDIT_ACTION_PLAN.md  DETECTOR_AUDIT_REPORT.md  DETECTOR_AUDIT_TECHNICAL_APPENDIX.md  EXIT_STRATEGY.md  GEMINI.md  INSTITUTIONAL_COMPLIANCE_SUMMARY.md  LICENSE  OPTIMIZATION_QUICKSTART.md  ORDER_BOOK_IMPROVEMENTS.md  PRECISION_OPTIMIZATION_FINAL_REPORT.md  PRECISION_OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  README.md  RECOMMENDED_CONFIG_UPDATE.md  SIGNAL_ANALYSIS_SUMMARY.md  SIGNAL_VALIDATION_SYSTEM_DOCUMENTATION.md  STATISTICAL_ANALYSIS_SUMMARY.md  THRESHOLD_OPTIMIZATION_RESULTS.md  USER_MANUAL.md  absorption_analysis.cjs  absorption_near_miss_analyzer.ts  absorption_optimization_configs.js  absorption_optimization_summary.md  absorption_signal_direction_analysis.md  absorption_threshold_analysis.html  absorption_turning_point_optimization.js  absorption_zone_analysis.js  (+132 more)
.claude/: compliance-log.txt
.github/: pull_request_template.md
__mocks__/: config.json  openai.ts  ws.ts
analysis/: README.md  absorption_signal_direction_analysis.md  analyze_success_with_price_reconstruction.ts  analyze_threshold_boundaries.ts  analyze_threshold_boundaries_fixed.ts  analyze_threshold_combinations.ts  analyze_threshold_optimization_binary.ts  analyze_traditional_indicators.ts  check_db.py  signal-analysis-script.py  signal_tp_sl_analysis.py  signal_tp_verification.py  signal_tp_verification_simple.py  swing-correlation-analyzer.py  swing_correlation_analysis.json  test_price_phase_detection.ts  verify_successful_signals.py
api_documentation/: README.md
backend/rust/orderbook-core/: Cargo.toml
backend/rust/orderbook-core/src/: lib.rs  orderbook.rs
backtest_results/: backtesting_results.html  performance_results.csv  performance_summary.md  rankings.csv  test_results.csv
backtesting_data/: LTCUSDT_2025-06-21_06h_trades.csv  LTCUSDT_2025-06-21_09h_trades.csv  LTCUSDT_2025-06-21_12h_trades.csv  LTCUSDT_2025-06-21_15h_trades.csv  LTCUSDT_2025-06-21_18h_trades.csv  LTCUSDT_2025-06-22_00h_trades.csv  LTCUSDT_2025-06-22_03h_trades.csv  LTCUSDT_2025-06-22_06h_trades.csv  LTCUSDT_2025-06-22_09h_trades.csv  LTCUSDT_2025-06-22_12h_trades.csv  LTCUSDT_2025-06-22_18h_trades.csv  LTCUSDT_2025-06-22_21h_trades.csv  (+1 more)
rust/bindings/: Cargo.toml
rust/bindings/src/: lib.rs
rust/btreemap/: Cargo.toml  index.d.ts  native.d.ts  package.json
rust/btreemap-bindings/: Cargo.toml
rust/btreemap-bindings/src/: lib.rs
rust/btreemap/native/: index.node
rust/btreemap/src/: lib.rs
rust/financial-math/: Cargo.toml  native.d.ts  package.json
rust/financial-math/src/: arithmetic.rs  big_arithmetic.rs  conversions.rs  division.rs  lib.rs  statistics.rs  validation.rs  zones.rs
rust/orderbook/: Cargo.toml  README.md  build.rs  native.d.ts  package.json
rust/orderbook-bindings/: Cargo.toml
rust/orderbook-bindings/src/: lib.rs
rust/orderbook/native/: package.json
rust/orderbook/scripts/: copy-native.js
rust/orderbook/src/: financial_math.rs  lib.rs  neon_bindings.rs  orderbook.rs  types.rs
(+938 files in other folders)
