[package]
name = "financial-math-bindings"
version = "0.1.0"
edition = "2021"
description = "Node.js bindings for high-performance financial math library"

[lib]
crate-type = ["cdylib"]

[dependencies]
neon = { version = "1.0", default-features = false, features = ["napi-6"] }
financial-math = { path = "../financial-math" }
