[package]
name = "btreemap-bindings"
version = "0.1.0"
edition = "2021"
description = "Node.js bindings for btreemap-core library"
license = "MIT"
authors = ["OrderFlow Trading"]

[lib]
crate-type = ["cdylib"]

[dependencies]
neon = { version = "1.0", default-features = false, features = ["napi-6"] }
btreemap-core = { path = "../btreemap-core" }
serde_json = "1.0"
lazy_static = "1.4"