[package]
name = "orderbook-bindings"
version = "0.1.0"
edition = "2021"
description = "Node.js bindings for orderbook-core library"
license = "MIT"
authors = ["OrderFlow Trading"]

[lib]
crate-type = ["cdylib"]

[dependencies]
neon = { version = "1.0", default-features = false, features = ["napi-6"] }
orderbook-core = { path = "../orderbook-core" }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"