[package]
name = "orderbook"
version = "0.1.0"
edition = "2021"

[lib]
name = "orderbook"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
lazy_static = "1.4"

[dependencies.neon]
version = "1.0"
default-features = false
features = ["napi-6"]

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"